--- a/src/app/home-login/home-login.component.html
+++ b/src/app/home-login/home-login.component.html
@@ -12,15 +12,15 @@
                           <h5 class="card-title" style="text-align: center; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"> L O G I N</h5>
                           <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                             <label for="" class="form-label">Username</label>
-                            <input type="text" placeholder="Username" class="form-control">
+                            <input name="Username" [(ngModel)] = "Username" type="text" placeholder="Username" class="form-control">
                         </div>
                         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                             <label for="" class="form-label">Password</label>
-                            <input type="password" id="" placeholder="Password" class="form-control">
+                            <input name="Password" [(ngModel)] = "Password" type="password" id="" placeholder="Password" class="form-control">
                         </div>
                         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
                             <br>
-                            <a routerLink="/food" class="btn btn-dark">Login</a>
+                            <button (click)="readValue()" routerLink="/food" class="btn btn-dark">Login</button>
                         </div>
                     </div>  
                 </div>
